--- a/.gitattributes
+++ b/.gitattributes
@@ -2,12 +2,14 @@
 /.github/               export-ignore
 /config/                export-ignore
 /test/                  export-ignore
+/tools/                 export-ignore
 /.editorconfig          export-ignore
 /.gitattributes         export-ignore
 /.gitignore             export-ignore
 /.php_cs                export-ignore
 /infection.json         export-ignore
 /Makefile               export-ignore
+/phive.xml              export-ignore
 /phpstan-baseline.neon  export-ignore
 /phpstan.neon           export-ignore
 /psalm-baseline.xml     export-ignore
