--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -459,7 +459,7 @@ jobs:
             const repository = context.repo
 
             await github.pulls.merge({
-              merge_method: "rebase",
+              merge_method: "merge",
               owner: repository.owner,
               pull_number: pullRequest.number,
               repo: repository.repo,
