Enhancement: Synchronize with ergebnis/php-library-template

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -261,12 +261,6 @@ jobs:
         if: "matrix.dependencies == 'highest'"
         run: "composer update --no-interaction --no-progress --no-suggest"
 
-      - name: "Show Doctrine mapping information"
-        run: "vendor/bin/doctrine orm:info"
-
-      - name: "Validate Doctrine mapping"
-        run: "vendor/bin/doctrine orm:validate-schema --skip-sync"
-
       - name: "Run auto-review tests with phpunit/phpunit"
         run: "vendor/bin/phpunit --configuration=test/AutoReview/phpunit.xml"
 
@@ -381,8 +375,8 @@ jobs:
       - name: "Run mutation tests with pcov and infection/infection"
         run: "vendor/bin/infection --ignore-msi-with-no-mutations --min-covered-msi=${{ env.MIN_COVERED_MSI }} --min-msi=${{ env.MIN_MSI }}"
 
-  dependabot:
-    name: "Dependabot"
+  merge:
+    name: "Merge"
 
     runs-on: "ubuntu-latest"
 
@@ -394,7 +388,13 @@ jobs:
       - "static-code-analysis"
       - "tests"
 
-    if: "(github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]') && github.event_name == 'pull_request' && startsWith(github.event.pull_request.title, 'Build(deps-dev)')"
+    if: >
+      github.event_name == 'pull_request' &&
+      github.event.pull_request.draft == false && (
+        (github.actor == 'dependabot-preview[bot]' && startsWith(github.event.pull_request.title, 'Build(deps-dev)')) ||
+        (github.actor == 'ergebnis-bot' && github.event.pull_request.title == 'Enhancement: Update license year') ||
+        (github.actor == 'localheinz' && contains(github.event.pull_request.labels.*.name, 'merge'))
+      )
 
     steps:
       - name: "Assign @ergebnis-bot"
@@ -437,6 +437,7 @@ jobs:
 
       - name: "Approve pull request"
         uses: "actions/github-script@0.8.0"
+        if: "github.actor != 'ergebnis-bot'"
         with:
           github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
           script: |
@@ -450,37 +451,6 @@ jobs:
               repo: repository.repo,
             })
 
-      - name: "Merge pull request"
-        uses: "actions/github-script@0.8.0"
-        with:
-          github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
-          script: |
-            const pullRequest = context.payload.pull_request
-            const repository = context.repo
-
-            await github.pulls.merge({
-              merge_method: "merge",
-              owner: repository.owner,
-              pull_number: pullRequest.number,
-              repo: repository.repo,
-            })
-
-  license:
-    name: "License"
-
-    runs-on: "ubuntu-latest"
-
-    needs:
-      - "code-coverage"
-      - "coding-standards"
-      - "dependency-analysis"
-      - "mutation-tests"
-      - "static-code-analysis"
-      - "tests"
-
-    if: "github.actor == 'ergebnis-bot' && github.event_name == 'pull_request' && github.event.pull_request.title == 'Enhancement: Update license year'"
-
-    steps:
       - name: "Merge pull request"
         uses: "actions/github-script@0.8.0"
         with:
