--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -28,8 +28,6 @@ branches:
           - "Tests (7.4, highest)"
           - "Code Coverage (7.4, locked)"
           - "Mutation Tests (7.4, locked)"
-          - "codecov/patch"
-          - "codecov/project"
         strict: false
       restrictions:
 
@@ -57,6 +55,10 @@ labels:
 
   - name: "enhancement"
     color: "0e8a16"
+    description: ""
+
+  - name: "merge"
+    color: "6f42c1"
     description: ""
 
   - name: "question"
