--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -9,8 +9,8 @@ on: # yamllint disable-line rule:truthy
       - "master"
 
 env:
-  MIN_COVERED_MSI: 95
-  MIN_MSI: 91
+  MIN_COVERED_MSI: 98
+  MIN_MSI: 96
   REQUIRED_PHP_EXTENSIONS: "mbstring"
 
 jobs:
@@ -268,13 +268,13 @@ jobs:
         run: "vendor/bin/doctrine orm:validate-schema --skip-sync"
 
       - name: "Run auto-review tests with phpunit/phpunit"
-        run: "vendor/bin/phpunit --configuration=test/AutoReview/phpunit.xml"
+        run: "vendor/bin/phpunit --configuration=test/phpunit.xml --coverage-text --testsuite=auto-review"
 
       - name: "Run unit tests with phpunit/phpunit"
-        run: "vendor/bin/phpunit --configuration=test/Unit/phpunit.xml"
+        run: "vendor/bin/phpunit --configuration=test/phpunit.xml --coverage-text --testsuite=unit"
 
       - name: "Run integration tests with phpunit/phpunit"
-        run: "vendor/bin/phpunit --configuration=test/Integration/phpunit.xml"
+        run: "vendor/bin/phpunit --configuration=test/phpunit.xml --coverage-text --testsuite=integration"
 
   code-coverage:
     name: "Code Coverage"
@@ -324,7 +324,7 @@ jobs:
         run: "composer update --no-interaction --no-progress --no-suggest"
 
       - name: "Collect code coverage with pcov and phpunit/phpunit"
-        run: "vendor/bin/phpunit --configuration=test/Unit/phpunit.xml --coverage-clover=.build/logs/clover.xml"
+        run: "vendor/bin/phpunit --configuration=test/phpunit.xml --coverage-clover=.build/logs/clover.xml --testsuite=unit,integration"
 
       - name: "Send code coverage report to Codecov.io"
         env:
