--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,6 +1,11 @@
 parameters:
 	ignoreErrors:
 		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FieldDefinition\\:\\:__invoke\\(\\) has no return typehint specified\\.$#"
+			count: 1
+			path: src/FieldDefinition.php
+
+		-
 			message: "#^Anonymous function should have native return typehint \"string\"\\.$#"
 			count: 2
 			path: src/FieldDefinition.php
