Enhancement: Synchronize with ergebnis/php-library-template

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -403,6 +403,28 @@ jobs:
       )
 
     steps:
+      - name: "Request review from @ergebnis-bot"
+        uses: "actions/github-script@0.8.0"
+        with:
+          github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
+          script: |
+            const pullRequest = context.payload.pull_request
+            const repository = context.repo
+
+            const reviewers = [
+              "ergebnis-bot",
+            ]
+
+            await github.pulls.createReviewRequest({
+              owner: repository.owner,
+              pull_number: pullRequest.number,
+              repo: repository.repo,
+              reviewers: reviewers,
+            })
+
+      - name: "Wait"
+        run: "sleep 3"
+
       - name: "Assign @ergebnis-bot"
         uses: "actions/github-script@0.8.0"
         with:
@@ -422,24 +444,8 @@ jobs:
               repo: repository.repo,
             })
 
-      - name: "Request review from @ergebnis-bot"
-        uses: "actions/github-script@0.8.0"
-        with:
-          github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
-          script: |
-            const pullRequest = context.payload.pull_request
-            const repository = context.repo
-
-            const reviewers = [
-              "ergebnis-bot",
-            ]
-
-            await github.pulls.createReviewRequest({
-                owner: repository.owner,
-                pull_number: pullRequest.number,
-                repo: repository.repo,
-                reviewers: reviewers,
-            })
+      - name: "Wait"
+        run: "sleep 3"
 
       - name: "Approve pull request"
         uses: "actions/github-script@0.8.0"
@@ -458,7 +464,7 @@ jobs:
             })
 
       - name: "Wait"
-        run: "sleep 5"
+        run: "sleep 3"
 
       - name: "Merge pull request"
         uses: "actions/github-script@0.8.0"
