--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -31,6 +31,21 @@ parameters:
 			path: src/FieldDefinition/Resolvable.php
 
 		-
+			message: "#^Property Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Value\\:\\:\\$value has no typehint specified\\.$#"
+			count: 1
+			path: src/FieldDefinition/Value.php
+
+		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Value\\:\\:__construct\\(\\) has parameter \\$value with no typehint specified\\.$#"
+			count: 1
+			path: src/FieldDefinition/Value.php
+
+		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Value\\:\\:resolve\\(\\) has no return typehint specified\\.$#"
+			count: 1
+			path: src/FieldDefinition/Value.php
+
+		-
 			message: "#^Method Ergebnis\\\\FactoryBot\\\\FixtureFactory\\:\\:defineEntity\\(\\) has parameter \\$afterCreate with a nullable type declaration\\.$#"
 			count: 1
 			path: src/FixtureFactory.php
