--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -26,6 +26,11 @@ parameters:
 			path: src/FieldDefinition.php
 
 		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Closure\\:\\:resolve\\(\\) has no return typehint specified\\.$#"
+			count: 1
+			path: src/FieldDefinition/Closure.php
+
+		-
 			message: "#^Method Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Resolvable\\:\\:resolve\\(\\) has no return typehint specified\\.$#"
 			count: 1
 			path: src/FieldDefinition/Resolvable.php
