Fix: Restore ignore rules

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,16 @@ updates:
       include: "scope"
       prefix: "Build"
     directory: "/"
+    ignore:
+      - dependency-name: "doctrine/annotations"
+        versions:
+          - ">= 0"
+      - dependency-name: "doctrine/collections"
+        versions:
+          - ">= 0"
+      - dependency-name: "doctrine/orm"
+        versions:
+          - ">= 0"
     labels:
       - "dependency"
     open-pull-requests-limit: 10
